Validaciones faltantes, si un vehiculo ya está creado y ya está asociado a un usuario (si es false crear uno con true, si es true ya no crearlo porque no se puede tener dos vehiculoUsuario activo al mismo tiempo)
